# ClipsMachine

./: .gitignore  setup_clipsmachine.sh
clipsmachine/: AUTOMATION_GUIDE.md  MULTI_PLATFORM_GUIDE.md  README.md  pyproject.toml  run_scheduler.sh  test_subtitle_positioning.py
clipsmachine/src/clipsmachine/: __init__.py  brand_templates.py  cli.py  cloud_storage.py  config.py  metadata.py  multi_uploader.py  pipeline.py  progress.py  scheduler.py  subtitle_styles.py  subtitles.py  thumbnail_generator.py  uploader.py  virality_score.py  whisper_transcribe.py
